<resources>
    <string name="app_name">Real Estate Manager</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_property">Create property</string>
    <string name="popup_title_permission_files_access">this application needs to access the images to create a new property</string>
    <string name="press_again">Press again back for exit.</string>

    // Bottom Navigation Bar
    <string name="list_view">List View</string>
    <string name="map_view">Map View</string>
    <string name="simulation">Simulation</string>

    // PropertyCreateActivity
    <string name="surface_m2">Surface ( m2 )</string>
    <string name="number_of_rooms">Number of rooms</string>
    <string name="price">Price ( $ )</string>
    <string name="describe_the_property">Describe the property</string>
    <string name="location">Location</string>
    <string name="add_photo">Add Photo</string>
    <string name="select_from">Select from:</string>
    <string name="estate_agent">Estate agent</string>
    <string name="type_of_property">Type of property</string>
    <string name="create">Create</string>
    <string name="describe_the_photo">Describe the photo</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_delete_the_image">are you sure you want to delete the photo ?</string>
    <string name="delete">Delete</string>
    <string name="school">School</string>
    <string name="parc">Parc</string>
    <string name="stores">Stores</string>
    <string name="public_transport">Public transport</string>
    <string name="doctor">Doctor</string>
    <string name="hobbies">Hobbies</string>
    <string name="edit">Edit</string>
    <string name="edit_property">Edit property</string>
    <string name="you_must_select_at_least_one_picture">You must select at least one picture</string>
    <string-array name="type_property_array">
        <item>House</item>
        <item>Loft</item>
        <item>Castle</item>
        <item>Apartment</item>
        <item>Ranch</item>
        <item>penthouse</item>
        <item>Manor</item>
    </string-array>
    <string-array name="estate_agent_array">
        <item>PELTIER Antoine</item>
        <item>PLAZA Stephane</item>
        <item>RYAN Jack</item>
    </string-array>

    // PropertyDetailActivity
    <string name="picture_in_full_screen">Picture in full screen</string>
    <string name="close">Close</string>
    <string name="city">City</string>
    <string name="postal_code">Postal code</string>
    <string name="number">Number</string>
    <string name="street">Street</string>
    <string name="n_c">NC</string>
    <string name="description">Description</string>
    <string name="interest_point">Interest point</string>
    <string name="sold">Sold</string>
    <string name="to_see_the_good_around_you">to see the good around you, the app needs your current location.</string>
    <string name="search">Search</string>
    <string name="maps_view">Maps view</string>
    <string name="finish">Finish</string>
    <string name="the_date_of_sold_must_be_greater_than_the_date_of_sale">The date of sold must be greater than the date of sale</string>

    // PropertyMortgageActivity
    <string name="mortgage_simulation">Mortgage simulation</string>
    <string name="price_">Price</string>
    <string name="rate">Rate</string>
    <string name="simulate">Simulate</string>
    <string name="duration">Duration</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="date_of_sale">Date of sale</string>
    <string name="number_of_photos_minimum">Number of photos (minimum)</string>
    <string name="provision">Provision</string>
    <string name="your_simulation">Your simulation</string>
    <string name="date_null">__/__/__</string>
    <string name="the_minimum_area_must_be_less_than_the_maximum_area">The minimum area must be less than the maximum area</string>
    <string name="the_minimum_price_must_be_less_than_the_maximum_price">The minimum price must be less than the maximum price</string>
    <string name="the_minimum_date_must_be_less_than_the_maximum_date">The minimum date must be less than the maximum date</string>
    <string name="all">All</string>
    <string name="the_contribution_must_not_exceed_the_price_of_the_property">The contribution must not exceed the price of the property</string>
    <string name="price_must_not_be_zero">Price must not be zero</string>
    <string-array name="duration_mortgage_simulation">
        <item>2 years</item>
        <item>3 years</item>
        <item>4 years</item>
        <item>5 years</item>
        <item>6 years</item>
        <item>7 years</item>
        <item>8 years</item>
        <item>9 years</item>
        <item>10 years</item>
        <item>11 years</item>
        <item>12 years</item>
        <item>13 years</item>
        <item>14 years</item>
        <item>15 years</item>
        <item>16 years</item>
        <item>17 years</item>
        <item>18 years</item>
        <item>19 years</item>
        <item>20 years</item>
        <item>21 years</item>
        <item>22 years</item>
        <item>23 years</item>
        <item>24 years</item>
        <item>25 years</item>
        <item>26 years</item>
        <item>27 years</item>
        <item>28 years</item>
        <item>29 years</item>
        <item>30 years</item>
    </string-array>

    <string-array name="choice_date_sold_search">
        <item>All</item>
        <item>Less than 1 week</item>
        <item>Less than 2 weeks</item>
        <item>Less than 1 month</item>
        <item>Less than 2 months</item>
        <item>Less than 6 months</item>
        <item>Less than 1 year</item>
    </string-array>

    // Notification
    <string name="the_new_property_has_been_successfully_created">The new property has been successfully created</string>
    <string name="new_property">New Property</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="error_when_creating_the_property">Error when creating the property</string>
    <string name="no_result">No result</string>
    <string name="no_description">No description</string>

</resources>
