<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/create_property"
        android:icon="@drawable/ic_create"
        android:title="@string/create_property"
        app:showAsAction="ifRoom"/>

    <group
        android:id="@+id/detail_menu_group">
        <item
            android:id="@+id/edit"
            android:title="@string/edit"
            android:icon="@drawable/ic_border_color"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/mortgage"
            android:title="@string/mortgage_simulation"
            android:icon="@drawable/ic_equalizer"
            app:showAsAction="ifRoom"/>
    </group>

    <item
        android:id="@+id/research_property"
        android:title="@string/research"
        app:showAsAction="never"/>

</menu>